<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"
    tools:context=".Authentication.LoginActivity">



    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:indeterminate="false"
            android:max="100"
            android:progress="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/Widget.AppCompat.ProgressBar"
            android:indeterminateTint="@color/colorPrimary"

            />
        <TextView
            android:id="@+id/progress_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/logging_you_in"/>
    </LinearLayout>



    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="40sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="22dp"
        android:layout_marginStart="4dp"
        android:padding="4dp"
        />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_login"
        android:hint="@string/enter_email"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_layout"
        android:hint="@string/enter_password"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:padding="4dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_forgot_pass"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:padding="4dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/button_curve_background"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_forgot_pass"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/line_view"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_below="@id/btn_login"/>

    <TextView
        android:id="@+id/txt_or"
        android:text="@string/or"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_view"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_or"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txt_does_not_have_account"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="2dp"
            android:text="@string/doesn_t_have_an_account" />


    <TextView
        android:id="@+id/txt_sign_up"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:padding="4dp"
        android:text="@string/sign_up" />

    </LinearLayout>


</RelativeLayout>